version 0.013; 2017-07-29

  * no longer include a Makefile.PL in the distribution

  * in documentation, use four-column indentation for all verbatim
    material

  * in META.{yml,json}, point to public bug tracker

version 0.012; 2012-02-04

  * include META.json in distribution

  * convert .cvsignore to .gitignore

  * add MYMETA.json to .gitignore

version 0.011; 2010-10-21

  * port to Perl 5.13.6, where changed behaviour of signed zeroes in
    Perl arithmetic broke nextdown() and nextafter() and caused false
    test failures for several other functions

version 0.010; 2010-07-26

  * use simpler "parent" pragma in place of "base"

  * in documentation, use the term "truth value" instead of the less
    precise "boolean"

  * check for required Perl version at runtime

  * use full stricture in test suite

  * use full stricture in Build.PL

  * in Build.PL, explicitly declare configure-time requirements

  * remove bogus "exit 0" from Build.PL

  * add MYMETA.yml to .cvsignore

version 0.009; 2008-04-06

  * refer to optional constants more carefully in the code, to avoid
    syntax problems on systems that lack infinities and NaNs

  * fix a skip count that caused false test failures on systems lacking
    signed zeroes

version 0.008; 2008-04-02

  * bugfix: in initialisation, correctly override any ambient
    $SIG{__DIE__}

version 0.007; 2007-10-02

  * close DATA filehandle when finished reading from it

  * fix some tests that were producing false failures on perl 5.6

version 0.006; 2007-10-01

  * bugfix: change behaviour of nextafter() when both arguments are
    numerically zero to that specified by IEEE 754: the second argument
    is returned rather than the first

  * bugfix: in hex_float(), cleanly reject non-ASCII digits in exponent

  * bugfix: in float_hex(), cleanly reject non-ASCII digits in an
    "EXPONENT="-type "zero_strategy" setting

  * add IEEE 754r functions nextup() and nextdown()

  * add IEEE 754r function totalorder()
