@@ -1,7 +1,7 @@
 .gitignore
-Build.PL
 Changes
 MANIFEST
+Makefile.PL
 META.json
 META.yml
 README
