@@ -1,3 +1,6 @@
+
+  * Remove use of Module::Build, and re-add Makefile.PL to the distribution.
+
 version 0.013; 2017-07-29
 
   * no longer include a Makefile.PL in the distribution
